--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - run:
           name: Failure Step
-          command: return 1
+          command: exit 1
       - run:
           name: Execution Step
           command: echo Hello Error!
